# crypto_ai_system

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  CRYPTO_AI_SYSTEM_MASTER_CONTEXT.md  Dockerfile  ENV_REVIEW_STEP80.md  GITHUB_UPDATE_COMMANDS_STEP120.md  GITHUB_UPDATE_COMMANDS_STEP150.md  P10_LIVE_CANARY_ONE_ORDER_EXECUTION_BOUNDARY_REPORT.md  P11_LIVE_CANARY_POST_SUBMIT_EVIDENCE_REVIEW_REPORT.md  P13_LIVE_SCALED_READINESS_REVIEW_REPORT.md  P19_DOCKER_LAUNCHER_EVIDENCE_INTAKE_REPORT.md  P1_LIVE_CANDIDATE_DATA_FOUNDATION_REPORT.md  P20_EXTERNAL_EVIDENCE_TEMPLATE_EXPORT_PACK_REPORT.md  P21_CI_FILLED_EVIDENCE_RELEASE_CANDIDATE_BUNDLE_REPORT.md  P23_OPERATOR_ACCEPTED_RELEASE_CANDIDATE_HANDOFF_REPORT.md  P24_RUNTIME_ENABLEMENT_REQUEST_INTAKE_VALIDATOR_REPORT.md  P26_OPERATOR_RUNTIME_ACTIVATION_REQUEST_TEMPLATE_GATE_REPORT.md  P28_FINAL_OPERATOR_RUNTIME_ACTIVATION_GATE_REVIEW_REPORT.md  P2_PAPER_OPERATION_VALIDATION_REPORT.md  P31_OPERATOR_DECISION_MATRIX_DASHBOARD_EXPORT_REPORT.md  P32_TELEGRAM_LAUNCHER_DASHBOARD_COMMAND_CONTRACT_REPORT.md  P35_OPERATOR_UX_QUICKSTART_RUNBOOK_PACK_REPORT.md  P39_OPERATOR_SUPPORT_BUNDLE_INTAKE_VALIDATOR_REPORT.md  P3_CANDIDATE_MANUAL_APPROVAL_CHAIN_COMPLETION_REPORT.md  P41_OPERATOR_EVIDENCE_ARCHIVE_INDEX_AUDIT_TRAIL_REPORT.md  P42_OPERATOR_EVIDENCE_ARCHIVE_INTAKE_VALIDATOR_REPORT.md  P43_OPERATOR_EVIDENCE_ARCHIVE_ROUND_TRIP_SEAL_REPORT.md  P48_LOCAL_RUNTIME_ADAPTER_CONNECTOR_REPORT.md  P49_EXTERNAL_RUNTIME_EVIDENCE_HANDOFF_REPORT.md  P54_SEPARATE_P7_IMPORT_EXECUTOR_FINAL_GUARD_REPORT.md  P55_DISABLED_P7_IMPORTER_ATOMIC_APPEND_TRANSACTION_REPORT.md  P57_TRANSACTIONAL_P7_IMPORTER_INTEGRATION_REPORT.md  P58_EXTERNAL_RUNTIME_EVIDENCE_ACQUISITION_BOUNDARY_REPORT.md  P60_EXTERNAL_SIGNER_HTTP_TRANSPORT_INJECTION_HARNESS_REPORT.md  P62_OPERATOR_SIDE_EXTERNAL_ORDER_TEST_EXECUTION_KIT_REPORT.md  P63_CONCRETE_EXTERNAL_ORDER_TEST_EXECUTOR_INTEGRATION_REPORT.md  P64_OPAQUE_SENDER_SUBPROCESS_BRIDGE_REPORT.md  (+243 more)
external_runtime_packages/: __init__.py  pyproject.toml
external_runtime_packages/binance_futures_testnet_adapter/: README.md  (+9 more)
(+1805 files in other folders)
