[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-ai-system"
version = "0.286.2"
description = "Crypto AI System review-only chain and research/trading framework."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2,<3.0",
  "numpy>=1.24,<3.0",
  "requests>=2.32,<3.0",
  "websockets>=12,<14",
  "x10-python-trading-starknet==2.4.0",
  "python-dotenv>=1.0,<2.0",
  "PyYAML>=6.0,<7.0",
  "tabulate>=0.9,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
