[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-ai-system"
version = "0.300.0"
description = "Crypto AI System: lean five-agent trading pipeline (data -> research -> validation -> trading -> feedback)."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2,<3.0",
  "numpy>=1.24,<3.0",
  "requests>=2.32,<3.0",
  "websockets>=12,<14",
  "x10-python-trading-starknet==2.4.0",
  "python-dotenv>=1.0,<2.0",
  "PyYAML>=6.0,<7.0",
  "tabulate>=0.9,<1.0",
  "streamlit>=1.36,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
