[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-ai-system-binance-futures-testnet-adapter"
version = "0.7.0"
description = "Disabled-by-default operator-installed sender executable package for Binance USD-M Futures testnet order-test"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = ".."}
packages = [
  "external_runtime_packages",
  "external_runtime_packages.binance_futures_testnet_adapter",
]
